--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <div id="pointableData"></div>
     <div style="clear:both;"></div>
 </div>
+<!--<script src="node_modules/commonjs/lib/system.js"></script>-->
+<!--<script src="models/finger.js"></script>-->
+<!--<script src="models/hands.js"></script>-->
 <script src="main.js"></script>
 </body>
 </html>
